--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "graphql-tag": "^2.12.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-geocode": "^0.2.3",
     "react-geolocated": "^4.0.3",
     "react-use": "^17.4.0",
     "title": "^3.4.4",
