--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "@headlessui/react": "^1.6.4",
     "@heroicons/react": "^1.0.6",
     "@shopify/hydrogen": "^1.0.2",
+    "@stripe/react-stripe-js": "^1.9.0",
+    "@stripe/stripe-js": "^1.32.0",
+    "cashfree-elementjs": "^1.1.3",
     "clsx": "^1.1.1",
     "graphql-tag": "^2.12.6",
     "react": "^18.2.0",
